--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </ul>
         </div>
         <div class="process_desc_birth">
-        <p class="process_desc_birth_title">赴美⼊住就医产⼦</p>
+            <p class="process_desc_birth_title">赴美⼊住就医产⼦</p>
             <ul>
                 <li>重要性：☆  ☆  ☆  ☆</li>
                 <li>复杂度：☆  ☆  ☆</li>
@@ -61,7 +61,7 @@
                 <li>费⽤：较高</li>
                 <li>准备期：1个月</li>
             </ul>
-        </div>
+         </div>
     </div>
     <div class="PG_visa">
         <h2>2016上半年赴美签证报告显⽰ </h2>
@@ -70,7 +70,7 @@
         <h4>赴美产⼦ <span>诚实签证政策</span> 正式发布</h4>
         <p class="uscbp_name">USCBP 局长<br><strong>柯⽴寇斯基</strong></p>
         <p class="uscbp_desc">美国海关及边境保护局(USCBP)局长柯⽴寇斯基表⽰："中国孕妇不论怀孕⼏个月都可⼊境美国，孕妇⼀定要诚实告知备⼊境产⼦，同时提出可全额支付相关生产医疗费用的财务证明即可。"</p>
-        </div>
+    </div>
     <div class="PG_septOne">
         <h2>北美管家⾃营诚实签证团队<br>⼀⼿⾼效诚实签办理 成功率</h2>
         <div class="septOne_desc">
@@ -100,61 +100,61 @@
                 </li>
             </ul>
          </div>
-        </div>
-   
+    </div>
     <div class="PG_from">
         <h2> 我们有⼀个⽬标：<br> 让孕妈<span>轻松无忧</span>实现赴美生子之旅</h2>     
         <div class="form_subtitle">
             <h3>提交您的规划信息 <br> 北美管家将为您私⼈定制全程规划及费⽤清单</h3>
         </div>
         <div class="form_cell">
-        <form>
-            <div class="info-form-group">
-                <ul>
-                <li>
-                    <label>姓名</label>
-                    <input type="text" name="#" placeholder="李妈妈">
-                </li>
-                <li>
-                    <label>年龄</label>
-                    <input type="text" name="#" placeholder="32">
-                </li>
-                <li>
-                    <label>陪同人数</label>
-                    <input type="text" name="#" placeholder="2">
-                </li>
-                <li>
-                    <label>手机号</label>
-                    <input type="number" name="#" placeholder="18912345678">
-                </li>
-                </ul>
-            </div>
-            <div class="time-form-group">
-                  <label class="time-radio-inline">
-                      <span>孕期</span><input type="radio"  value="" name="docInlineRadio">正备怀孕
-                  </label>
-                  <label class="time-radio-inline">
-                        <input type="radio" name="docInlineRadio"> 1-3个月
-                  </label>
-                  <label class="time-radio-inline">
-                        <input type="radio" name="docInlineRadio"> 4-6个月
-                  </label>
-                  <label class="time-radio-inline">
-                        <input type="radio" name="docInlineRadio"> 7-9个月
-                  </label>
-            </div>
-            <div class="way-form-group">
-                  <label class="way-radio-inline">
-                      <span>分娩方式</span><input type="radio"  value="" name="docInlineRadio">美国顺产
-                  </label>
-                  <label class="way-radio-inline">
-                        <input type="radio" name="docInlineRadio"> 美国顺产刨腹产
-                  </label>
-            </div>
-            <div class="commit-btn">
-                <button type="button">定制费用清单</button>
-            </div>
-        </form>
+            <form>
+                <div class="info-form-group">
+                    <ul>
+                        <li>
+                            <label>姓名</label>
+                            <input type="text" name="#" placeholder="李妈妈">
+                        </li>
+                        <li>
+                            <label>年龄</label>
+                            <input type="text" name="#" placeholder="32">
+                        </li>
+                        <li>
+                            <label>陪同人数</label>
+                            <input type="text" name="#" placeholder="2">
+                        </li>
+                        <li>
+                            <label>手机号</label>
+                            <input type="number" name="#" placeholder="18912345678">
+                        </li>
+                    </ul>
+                </div>
+                <div class="time-form-group">
+                      <label class="time-radio-inline">
+                          <span>孕期</span><input type="radio"  value="" name="docInlineRadio">正备怀孕
+                      </label>
+                      <label class="time-radio-inline">
+                            <input type="radio" name="docInlineRadio"> 1-3个月
+                      </label>
+                      <label class="time-radio-inline">
+                            <input type="radio" name="docInlineRadio"> 4-6个月
+                      </label>
+                      <label class="time-radio-inline">
+                            <input type="radio" name="docInlineRadio"> 7-9个月
+                      </label>
+                </div>
+                <div class="way-form-group">
+                      <label class="way-radio-inline">
+                            <span>分娩方式</span>
+                            <input type="radio"  value="" name="wayInlineRadio">美国顺产
+                      </label>
+                      <label class="way-radio-inline">
+                            <input type="radio" name="wayInlineRadio"> 美国顺产刨腹产
+                      </label>
+                </div>
+                <div class="commit-btn">
+                    <button type="button">定制费用清单</button>
+                </div>
+            </form>
         </div>        
     </div>
     <div class="PG_footer">
