--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <h3>（ 留下电话的孕妈可<span>免费</span>获得赴美产⼦全攻略⼿册1份 ）</h3>
         <form>
-            <div class="from_cell">
+            <div class="from_input">
                 <input class="input_phone" type="number" placeholder="请输入手机号码">
             </div>
             <div class="from_btn">
@@ -75,10 +75,22 @@
         <h2>北美管家⾃营诚实签证团队<br>⼀⼿⾼效诚实签办理 成功率</h2>
         <div class="septOne_desc">
             <ul>
-                <li>10年北美签证服务 旅⾏社资质保障</li>
-                <li>材料的充分准备 客户⾃⾝问题解析</li>
-                <li>海量签证经验分享 ⼀对⼀模拟⾯签</li>
-                <li>第三⽅担保平台交易 拒签全额退费</li>
+                <li>
+                    <img src="img/setp1-1.png">
+                    <p>10年北美签证服务 旅⾏社资质保障</p>
+                </li>
+                <li>
+                    <img src="img/setp1-2.png">
+                    <p>材料的充分准备 客户⾃⾝问题解析</p>
+                </li>
+                <li>
+                    <img src="img/setp1-3.png">
+                    <p>海量签证经验分享 ⼀对⼀模拟⾯签</p>
+                </li>
+                <li>
+                    <img src="img/setp1-4.png">
+                    <p>第三⽅担保平台交易 拒签全额退费</p>
+                </li>
             </ul>
         </div>
     </div>
@@ -128,28 +140,39 @@
                         </li>
                     </ul>
                 </div>
-                <div class="time-form-group">
-                      <label class="time-radio-inline">
-                          <span>孕期</span><input type="radio"  value="" name="docInlineRadio">正备怀孕
-                      </label>
-                      <label class="time-radio-inline">
-                            <input type="radio" name="docInlineRadio"> 1-3个月
-                      </label>
-                      <label class="time-radio-inline">
-                            <input type="radio" name="docInlineRadio"> 4-6个月
-                      </label>
-                      <label class="time-radio-inline">
-                            <input type="radio" name="docInlineRadio"> 7-9个月
-                      </label>
+                <div class="time-form-group-up">
+                    <h4>孕期</h4>
+                    <label class="time-radio-inline">
+                        <input type="radio" name="docInlineRadio">
+                        <span>正备怀孕</span>
+                    </label>
+                    <label class="time-radio-inline">
+                        <input type="radio" name="docInlineRadio">
+                        <span>1-3个月</span>
+                    </label>
                 </div>
+                <div class="time-form-group-down">
+                    <label class="time-radio-inline">
+                        <input type="radio" name="docInlineRadio">
+                        <span>4-6个月</span> 
+                    </label>
+                    <label class="time-radio-inline">
+                        <input type="radio" name="docInlineRadio"> 
+                        <span>7-9个月</span>
+                    </label> 
+                </div>                  
+                
                 <div class="way-form-group">
-                      <label class="way-radio-inline">
-                            <span>分娩方式</span>
-                            <input type="radio"  value="" name="wayInlineRadio">美国顺产
-                      </label>
-                      <label class="way-radio-inline">
-                            <input type="radio" name="wayInlineRadio"> 美国顺产刨腹产
-                      </label>
+                    <h4>分娩方式</h4>
+                    <label class="way-radio-inline">
+                        
+                        <input type="radio"  value="" name="wayInlineRadio">
+                        <span>美国顺产</span>
+                    </label>
+                    <label class="way-radio-inline">
+                        <input type="radio" name="wayInlineRadio"> 
+                        <span>美国顺产刨腹产</span>
+                    </label>
                 </div>
                 <div class="commit-btn">
                     <button type="button">定制费用清单</button>
