--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
         <h3>（ 留下电话的孕妈可<span>免费</span>获得赴美产⼦全攻略⼿册1份 ）</h3>
         <form>
             <div class="from_input">
-                <input class="input_phone" type="number" placeholder="请输入手机号码">
+                <input class="input_phone" id="phoneBanner" type="number" placeholder="请输入手机号码">
+                <span class="errorBanger" style="display: none;">手机号码不能为空</span>
             </div>
             <div class="from_btn">
-                <button type="button">免费领取攻略</button>
+                <button type="button" id="bangerBtn">免费领取攻略</button>
             </div>          
         </form>
         <div class="phone">
@@ -136,7 +137,8 @@
                         </li>
                         <li>
                             <label>手机号</label>
-                            <input type="number" name="#" placeholder="18912345678">
+                            <input type="number" name="#"  class="phoneInfo" id="phoneInfoEle" placeholder="18912345678">
+                            <span class="errorInfo" style="display: none;">手机号码不正确</span>
                         </li>
                     </ul>
                 </div>
@@ -165,7 +167,6 @@
                 <div class="way-form-group">
                     <h4>分娩方式</h4>
                     <label class="way-radio-inline">
-                        
                         <input type="radio"  value="" name="wayInlineRadio">
                         <span>美国顺产</span>
                     </label>
@@ -175,7 +176,7 @@
                     </label>
                 </div>
                 <div class="commit-btn">
-                    <button type="button">定制费用清单</button>
+                    <button type="button" id="fromBtn">定制费用清单</button>
                 </div>
             </form>
         </div>        
@@ -194,5 +195,7 @@
         <p class="copyright">@2015 北美管家（北京）科技发展有限公司版权所有 京ICP备16019791号－1</p>
     </div>
 </div>
+<script src="./js/jquery-3.1.1.min.js"></script>
+<script src="./js/index.js"></script>
 </body>
 </html>
