change the radio

--- a/index.html
+++ b/index.html
@@ -144,22 +144,26 @@
                 </div>
                 <div class="time-form-group-up">
                     <h4>孕期</h4>
-                    <label class="time-radio-inline">
-                        <input type="radio" name="docInlineRadio">
+                    <label class="time-radio-inline">                                              
+                        <input type="radio" name="docInlineRadio" id="radio-1" hidden/>
+                        <label for="radio-1" class="radio-beauty"></label>
                         <span>正备怀孕</span>
                     </label>
-                    <label class="time-radio-inline">
-                        <input type="radio" name="docInlineRadio">
+                    <label class="time-radio-inline">                       
+                        <input type="radio" name="docInlineRadio" id="radio-2" hidden/>
+                        <label for="radio-2" class="radio-beauty"></label>
                         <span>1-3个月</span>
                     </label>
                 </div>
                 <div class="time-form-group-down">
                     <label class="time-radio-inline">
-                        <input type="radio" name="docInlineRadio">
+                        <input type="radio" name="docInlineRadio" id="radio-3" hidden/>
+                        <label for="radio-3" class="radio-beauty"></label>
                         <span>4-6个月</span> 
                     </label>
-                    <label class="time-radio-inline">
-                        <input type="radio" name="docInlineRadio"> 
+                    <label class="time-radio-inline seven">
+                        <input type="radio" name="docInlineRadio" id="radio-4" hidden/>
+                        <label for="radio-4" class="radio-beauty"></label>
                         <span>7-9个月</span>
                     </label> 
                 </div>                  
@@ -167,11 +171,13 @@
                 <div class="way-form-group">
                     <h4>分娩方式</h4>
                     <label class="way-radio-inline">
-                        <input type="radio"  value="" name="wayInlineRadio">
+                        <input type="radio"  value="" name="wayInlineRadio" id="radio-5" hidden/>
+                        <label for="radio-5" class="radio-beauty"></label>
                         <span>美国顺产</span>
                     </label>
                     <label class="way-radio-inline">
-                        <input type="radio" name="wayInlineRadio"> 
+                        <input type="radio" name="wayInlineRadio" id="radio-6" hidden/> 
+                        <label for="radio-6" class="radio-beauty"></label>
                         <span>美国顺产刨腹产</span>
                     </label>
                 </div>
